# coreutils-rs

./: Cargo.toml  README.md
cat/: Cargo.toml
cat/src/: catwriter.rs  lib.rs  main.rs
echo/: Cargo.toml
echo/src/: main.rs
