[package]
name = "cat"
version = "0.1.0"
authors = ["Dominik Muc <git@dominikmuc.dev>"]
license = "MIT"
description = "Simple cat rewrite."
repository = "https://github.com/dominik-muc/coreutils-rs"
edition = "2021"
readme = "../README.md"
keywords = ["cli", "cat", "utils"]
categories = ["cli", "utils"]
rust-version = "1.79.0"

[profile.release]
opt-level = 3
strip = "symbols"
